refactor: day 11 (class and tests)