@@ -1,28 +1,62 @@
 package test;
 
-import software.aoc.day11.a.Reactor;
+import software.aoc.day11.NetworkParser;
+import software.aoc.day11.ReactorNetwork;
+import software.aoc.day11.a.BasicRouteAnalyzer;
+import org.junit.jupiter.api.Test;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+import java.util.function.Predicate;
+
+import static org.assertj.core.api.Assertions.assertThat;
 
 public class Day11ATest {
 
-    public static void main(String[] args) {
+    private static final String EXAMPLE_INPUT = """
+            aaa: you hhh
+            you: bbb ccc
+            bbb: ddd eee
+            ccc: ddd eee ff
+            ddd: ggg
+            eee: out
+            ff: out
+            ggg: out
+            hhh: ccc ff iii
+            iii: out
+            """;
+
+    @Test
+    public void should_count_all_paths_from_you_to_out() {
+        List<String> validLines = EXAMPLE_INPUT.lines()
+                .filter(Predicate.not(String::isBlank))
+                .toList();
+
+        ReactorNetwork network = NetworkParser.parse(validLines);
+        BasicRouteAnalyzer analyzer = new BasicRouteAnalyzer(network);
+
+        long totalPaths = analyzer.countPaths("you", "out");
+
+        assertThat(totalPaths).isEqualTo(5L);
+    }
+
+    @Test
+    public void solve_puzzle_with_real_input() {
         Path inputPath = Paths.get("test", "resources", "day11-a", "input.txt");
 
-        try (Stream<String> lines = Files.lines(inputPath)) {
-            List<String> validLines = lines
-                    .filter(line -> !line.isBlank())
-                    .collect(Collectors.toList());
+        try {
+            List<String> validLines = Files.lines(inputPath)
+                    .filter(Predicate.not(String::isBlank))
+                    .toList();
 
-            Reactor reactor = Reactor.from(validLines);
-            long paths = reactor.countPathsFromYouToOut();
+            ReactorNetwork network = NetworkParser.parse(validLines);
+            BasicRouteAnalyzer analyzer = new BasicRouteAnalyzer(network);
 
-            System.out.println("El numero total de caminos desde 'you' hasta 'out' es: " + paths);
+            long totalPaths = analyzer.countPaths("you", "out");
+
+            System.out.println("La respuesta al rompecabezas es: " + totalPaths);
 
         } catch (Exception e) {
             System.err.println("Error procesando el archivo: " + e.getMessage());
